--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@types/react-dropzone": "^5.1.0",
     "jszip": "^3.10.1",
-    "next": "13.5.6",
+    "next": "^14.2.8",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
