--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-dropzone": "^5.1.0",
+    "browser-image-compression": "^2.0.2",
     "jszip": "^3.10.1",
     "next": "^14.2.8",
     "react": "^18",
